# ttube

./: .env.example  .eslintrc.json  .gitignore  CLAUDE.md  ENV_SETUP.md  README.md  WHISPER_CPP_SETUP.md  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json  토마토_금지_대본.md
python-server/: .gitignore  README.md  build_whisper_metal.sh  cache_manager.py  constants.py  gpu_utils.py  main.py  naver_api_setup.md  naver_datalab.py  pyproject.toml  requirements.txt  run_server.py  test_whisper_metal.py  whisper_cpp_metal.py  whisper_cpp_utils.py
python-server/whisper.cpp/examples/whisper.android.java/gradle/wrapper/: gradle-wrapper.properties
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/claude/: route.ts
src/app/api/grok/: route.ts
src/components/: AIEnhancementSection.tsx  KeywordCloud.tsx  SearchForm.tsx  SearchResultsSection.tsx  ThemeRegistry.tsx  TranscriptionForm.tsx  TrendingItem.tsx  TrendingSection.tsx  VideoCard.tsx
src/constants/: whisper.ts
src/store/: counterStore.ts  tabStore.ts  youtubeStore.ts
src/utils/: aiEnhancement.ts  formatters.ts  naverDatalabApi.ts  transcriptionApi.ts
